--- a/code/style.css
+++ b/code/style.css
@@ -2,10 +2,12 @@
   margin: 0;
 }
 html {
-  background: lightgrey;
   color: black;
   font-family: Helvetica, sans-serif, Arial,;
   font-size: 12px;
+  background-color: slategray
+  animation-name: example;
+  animation-duration: 4s;
 }
 
 .logo {
@@ -14,6 +16,7 @@ html {
   position: sticky;
   border-radius: 10px;
   margin: 30px;
+  box-shadow: 10px 5px 5px teal;
 
 }
 
@@ -35,9 +38,14 @@ nav{
 
 }
 li{
-  padding: 5px;
+  padding: 10px;
   position: -webkit-sticky;
-  border-right: 10px;
+  border-right: 20px;
+}
+html {
+  background-color: lightgray;
+  animation-name: example;
+  animation-duration: 4s;
 }
 .big-news{
   display: flex;
@@ -46,6 +54,10 @@ li{
   padding: 20px;
 /*  margin-right:10px;*/
 }
+.big-news-image{
+  width: 50%;
+}
+
 .big-news-text-block{
   text-align: center;
   margin: 20px;
@@ -81,7 +93,7 @@ li{
   align-items: center;
   background-color: white;
   flex-wrap: wrap;
-  border-width: 15 px;    
+  border-width: 15 px;   
 } 
    
 .flex-child {
@@ -105,6 +117,9 @@ li{
   color: black;
   text-align: right;
 }
+@keyframes example {
+  from {background-color: lightgray;}
+  to {background-color: white;}
 
 /* Hides navigation for mobile */
 @media (max-width:767px) {
@@ -120,10 +135,8 @@ li{
   .big-news{
     flex-direction: row;
   }
-  .big-news-text-block{
-    text-align: left;
   }
-  .small-news{
+  .flex-parent{
     grid-template-columns: repeat(2, 1fr);
     gap: 0 20px;
   }
@@ -131,7 +144,7 @@ li{
 
 /* Desktop goes 4 grid columns*/
 @media (min-width:992px) {
-  .small-news{
+  .flex-parent{
     grid-template-columns: repeat(4, 1fr);
   }
 }
