--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,210 @@
 html {
-  background: #0025ff;
-  color: #fff;
+  background: white;
+  color: red;
+}
+
+header {
+display: flex;
+flex-direction: column;
+align-items: center;
+height: 100px;
+margin-bottom: 50px;
+}
+
+.logo {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+ }
+
+ .list {
+  list-style-type: none;
+ }
+
+.navbar {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  margin: 0;
+  width: 100%;
+}
+
+.link {
+  text-decoration: none;
+  color: black;
+}
+
+.intro {
+  display: flex;
+  flex-direction: column;
+  color: black;
+  align-items: center;
+}
+
+.main-story {
+  width: 90%;
+  margin-bottom: 23px;
+  text-align: center;
+}
+.main-story:hover {
+  box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, .2);
+}
+
+.main-photo {
+  width: -webkit-fill-available;
+  margin: 0px 10px 23px 10px;
+}
+
+.main-photo:hover {
+  box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, .2);
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  color: black;
+  align-items: center;
+  margin: 0px 10px 23px 10px;
+  text-align: center;
+}
+
+.card:hover {
+  box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, .2);
+}
+
+.card-photo {
+  width: -webkit-fill-available;
+  margin-bottom: 10px;
+}
+
+.card-name {
+ margin: 0% 0% 0% 0%;
+}
+
+.small {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  flex-flow: row wrap;
+  justify-content: space-around;
+  padding: 0;
+  margin: 0;
+  list-style:none;
+  color: black;
+  background-color: pink;
+  margin-top: 10px;
+  line-height: 150px;
+  color: black;
+  font-weight: bold;
+  font-size: 3em;
+  text-align: center;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  margin: 0% 0% 0% 0%;
+  height: 200px;
+}
+
+@media (min-width: 668px) {
+  
+}
+
+@media (min-width: 1024px) {
+  header {
+    display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  height: 100px;
+  }
+  
+  .logo {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+   }
+  
+   .list {
+    list-style-type: none;
+   }
+  
+  .navbar {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0;
+    padding-left: 20%;
+    width: 50%;
+  }
+  
+  .link {
+    text-decoration: none;
+    color: black;
+  }
+  .intro {
+    display: flex;
+    flex-direction: row;
+    color: black;
+    justify-content: space-between;
+  }
+  
+  .main-story {
+    width: 49%;
+  }
+  .main-story:hover {
+    box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, .2);
+  }
+  
+  .main-photo {
+    width: -webkit-fill-available;
+  }
+  
+  .card {
+    display: flex;
+    flex-direction: row;
+    color: black;
+    justify-content: space-between;
+  }
+  
+  .card:hover {
+    box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, .2);
+  }
+  
+  .card-photo {
+    width: -webkit-fill-available;
+    margin: 10% 10% 1% 10%;
+  }
+  
+  .card-name {
+   margin: 0% 0% 0% 0%;
+  }
+  
+  .small {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    flex-flow: row wrap;
+    justify-content: space-around;
+    padding: 0;
+    margin: 0;
+    list-style:none;
+    color: black;
+    background-color: pink;
+    margin-top: 10px;
+    line-height: 150px;
+    color: black;
+    font-weight: bold;
+    font-size: 3em;
+    text-align: center;
+  }
+  
+  .footer {
+    display: flex;
+    justify-content: center;
+    margin: 0;
+    padding: 0;
+    background-color: sandybrown;
+  } 
 }
