--- a/code/style.css
+++ b/code/style.css
@@ -53,6 +53,7 @@ img {
   color: rgb(31, 93, 95);
   background-color: #f7f7fa;
   font-size: 12px;
+  margin-left: 140px;
   justify-content: center;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -81,8 +82,7 @@ img {
   width: auto;
   grid-template-columns: 1fr; 
   gap: 5px; 
-  margin-top: 30px;
-  margin-bottom: 20px;
+  margin-top: 50px;
   justify-content: center;
   align-items: center;
   align-self: center;
@@ -99,7 +99,7 @@ img {
 }
 
 footer {
-  margin-top: 50px;
+  margin-top: 30px;
   text-align: center;
   border-top: 1px solid;
   border-color: rgb(31, 93, 95);
@@ -136,12 +136,32 @@ footer {
 }
 
 @media (min-width: 668px) {
+.gallery {
+  margin-top: 50px;
+  color: rgb(31, 93, 95);
+  margin-left: 335px;
+}
+
+@media (min-width: 668px) {
 .grid-container {
   display: grid;
   grid-template-columns: 1fr 1fr; 
   gap: 5px; 
   margin-top: 30px;
   margin-bottom: 20px;
+}
+
+@media (min-width: 668px) {
+  button {
+  height: 30px;
+  border: 1px solid;
+  border-color: rgb(31, 93, 95);
+  color: rgb(31, 93, 95);
+  background-color: #f7f7fa;
+  font-size: 12px;
+  margin-left: 335px;
+  justify-content: center;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 @media (min-width: 1024px) {
@@ -174,12 +194,33 @@ footer {
     }
 
 @media (min-width: 1024px) {
+      .gallery {
+        margin-top: 50px;
+        color: rgb(31, 93, 95);
+        margin-left: 10px;
+      }
+
+@media (min-width: 1024px) {
       .grid-container {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr; 
         gap: 5px; 
         margin-top: 30px;
         margin-bottom: 20px;
+      }
+
+ @media (min-width: 1024px) {
+        button {
+        height: 30px;
+        position: relative;
+        margin-left: 10px;
+        border: 1px solid;
+        border-color: rgb(31, 93, 95);
+        color: rgb(31, 93, 95);
+        background-color: #f7f7fa;
+        font-size: 12px;
+        justify-content: center;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
       }
 
 
