link hover color

--- a/code/style.css
+++ b/code/style.css
@@ -55,11 +55,12 @@ nav > a {
 a {
   color: #232425;
   text-decoration: none;
+  font-weight: bold;
 
 }
 
 a:hover {
-  color: #d3e3fc;
+  color: #77a6f7;
 
 }
 
