--- a/code/style.css
+++ b/code/style.css
@@ -3,7 +3,6 @@ html {
   background: #fff;
 }
 
-
 .header {
   display: flex;
   justify-content: space-between;
@@ -24,6 +23,7 @@ html {
 
 .navigation {
   font-family: 'Urbanist', sans-serif;
+  font-size: 20px;
   padding: 20px;
   padding-top:40px;
   margin-right: 30px;
@@ -46,7 +46,7 @@ html {
   width:27px;
   height: 3px;
   margin: 5px;
-  background-color: black;
+  background-color: white;
 }
 
 .burger {
@@ -64,7 +64,7 @@ p {
 }
 
 .big-news-section {
-  margin: 80px auto 20px auto;
+  margin: 90px auto 20px auto;
   display: grid;
   grid-template-rows: 0.2fr 0.7fr;
   grid-gap: 5px;
@@ -76,7 +76,6 @@ p {
   margin-bottom: 0;
   padding-bottom: 0;
   font-size: 22px;
-  
 }
 
 .small-img {
@@ -120,6 +119,24 @@ p {
   .navigation a {
     display: none;
   }
+
+  .header {
+    width: 100%;
+    position: fixed;
+    top: 0; 
+    background-color: rgb(153, 24, 24);
+  }
+  
+  .logo {
+    width: 200px;
+    height: auto;
+    margin-left: 0;
+    padding: 10px 50% 10px 10%; 
+  }
+
+  .navigation {
+    order: -1;
+  }
 }
 
 /* tablet */
@@ -128,6 +145,17 @@ p {
     display: none;
   }
 
+  .logo {
+    width: 180px;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  
+  .navigation {
+    order: -1;
+  }
+  
   .tortoise {
     width: 100%;
     height: 100%;
@@ -200,5 +228,4 @@ p {
      margin-left: 20px;
      margin-right: 20px;
    }
-
 }
