--- a/code/style.css
+++ b/code/style.css
@@ -2,6 +2,7 @@
   box-sizing: border-box;
   font-family: 'Courier New', Courier, monospace;
   margin: 0;
+  line-height: 1.6;
 }
 
 .header {
@@ -24,16 +25,13 @@ h1 {
 }
 
 .navigation a {
+  color: black;
   margin: 0 10px;
   font-size: 1.2em;
   text-decoration: none;
-}
-
-.navigation a {
-  color: black;
-  text-decoration: none;
   background-color: lightgray;
 }
+
 
 a:visited {
   color: black;
@@ -71,7 +69,7 @@ a:active {
   flex-direction: column;
   justify-content: center;
   text-align: center;
-  line-height: 1.6;
+  padding: 10px;
 }
 
 /* small news cards */ 
