--- a/code/style.css
+++ b/code/style.css
@@ -120,6 +120,7 @@ img.close.show {
   color: #b1b1b3;
   text-transform: uppercase;
   letter-spacing: .2em;
+  padding: 0 1rem;
 }
 
 .text-big-news {
