--- a/code/style.css
+++ b/code/style.css
@@ -37,7 +37,7 @@ h2 {
 h4 {
   margin: 5px 10px;
   font-family: 'Inter', sans-serif;
-  font-size: 15px;
+  font-size: 13px;
   font-weight: 600;
 }
 
@@ -59,16 +59,23 @@ a {
 }
 
 .navigation { 
-  height: 85px;
+  height: 100px;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  margin-top: 15px;
+  justify-content: space-between;
+}
+
+.navigation-logo {
+  height: 100px;
+  padding-top: 15px;
+  display: flex;
+  align-items: center;
 }
 
 .navigation-logo-img {
   height: 30px;
-  margin-left: 3%;
+  padding-left: 3%;
 }
 
 .navigation-list {
@@ -86,14 +93,14 @@ a {
 .navigation-list-item {
   font-family: 'Inter', sans-serif;
   font-size: 18px;
-  display: flex;
+  padding: 2px;
 }
 
 .big-news-parent {
   width: 96%;
-  margin: auto;
+  margin: 0px auto;
   background-color: white;
-  padding: 20px 0px 20px 0px;
+  padding: 20px 0px;
   display: flex;
   align-content: flex-start;
   justify-content: center;
@@ -102,7 +109,6 @@ a {
 
 .big-news-child {
   background-color: white;
-  border-top: 4px red solid;
   border: 0px 1px 1px 1px grey;
   box-shadow: 1px 1px 5px 1px lightgray;
   width: 92%;
@@ -112,15 +118,11 @@ a {
   flex-wrap: wrap;
 }
 
-.big-news-child:hover h1 {
-  text-decoration: underline;
-}
-
 .news-cards-parent {
   width: 96%;
   margin: auto;
   background-color: white;
-  padding: 10px 0px;
+  padding: 0px 0px 15px 0px;
   display: flex;
   align-content: flex-start;
   justify-content: center;
@@ -178,19 +180,18 @@ footer {
   }
 
   .navigation-logo-img {
-    margin-right: 110px;
-    margin-left: 20px;
+    padding-left: 20px;
   }
 
   .navigation-list {
     list-style: none;
+    width: 300px;
+    height: 100px;
+    padding-top: 15px;
+    margin-right: 15px;
     display: flex;
-    float: right;
-    justify-content: space-evenly;
-  }
-  
-  .navigation-list-item {
-    margin: 10px;
+    align-items: center;
+    justify-content: space-around;
   }
   
   .big-news-parent {
@@ -208,13 +209,17 @@ footer {
     width: 630px;
   }
 
+  .big-news-child:hover h1 {
+    text-decoration: underline;
+  }
+
   .news-cards-child {
     width: 310px;
     transition: transform ease-in-out .2s;
   }
 
   .news-cards-child:hover {
-    transform: scale(1.04);
+    transform: scale(1.03);
   }
 
   .news-cards-child:hover h2 {
@@ -227,10 +232,6 @@ footer {
 
   .navigation-container, .navigation {
     width: 1024px;
-  }
-
-  .navigation-logo-img {
-    margin-right: 455px;
   }
 
   .big-news-parent {
