--- a/code/style.css
+++ b/code/style.css
@@ -19,17 +19,16 @@ html {
   padding: 1 rem;
 }
 
+a.ex1:hover, a.ex1:active {
+  font-size: 150%;
+}
+
 .meny {
   font-size: x-small;
   padding: 1 rem;
   color: rgb(31, 93, 95);
   align-self: center;
 }
-
-/*.second-container {
-  display: grid;
-  grid-template-columns: 1fr
-}*/
 
 .news-img {
   width: 100%;
@@ -61,6 +60,7 @@ img {
 .gallery {
   margin-top: 50px;
   color: rgb(31, 93, 95);
+  margin-left: 140px;
 }
 
 .grid-container {
@@ -119,7 +119,7 @@ footer {
 
 @media (min-width: 668px) {
     img {
-    height: auto;
+    height: auto
   }
 
 @media (min-width: 668px) {
@@ -151,6 +151,7 @@ footer {
   margin-bottom: 20px;
 }
 
+
 @media (min-width: 668px) {
   button {
   height: 30px;
@@ -175,6 +176,12 @@ footer {
 @media (min-width: 1024px) {
     img {
     height: auto;
+  }
+
+@media (min-width: 1024px) {
+  .news-img:hover {
+    -webkit-transform: scaleX(-1);
+    transform: scaleX(-1);
   }
 
 @media (min-width: 1024px) {
