Added a favicon, updated the text in the readme, changed and moved some of the pictures.

--- a/code/style.css
+++ b/code/style.css
@@ -152,7 +152,7 @@ p:hover {
   }
 }
 
-/* Specification for tablet */
+/* Specification for tablet and small laptop */
 @media (min-width: 768px) and (max-width: 1231px) {
   .hero-image-container,
   .hero-text,
