--- a/code/style.css
+++ b/code/style.css
@@ -8,7 +8,7 @@
 body {
   background-color: orange;
   min-height: 100vh;
-  min-width: 444px; /*To make the body not to shrink*/
+  min-width: 500px; /*To make the body not to shrink*/
   
 }
 /*HEADER STYLING*/
@@ -95,11 +95,13 @@ a {
 /* SMALL SECTION: general styling for small section*/
 section.small-news {
   border:3px solid;
-  margin-top: 2rem; 
+  margin-top: 2rem;
+  /*display:flex;
+  flex-direction: column; */
 }
 
 div.card {
-  border:3px solid blue;
+  border:3px solid rgb(173, 115, 6);
   margin: 1rem;
   background-color: cornsilk;
 }
@@ -112,7 +114,6 @@ h3 {
 
 .card img {
   width: 100%;
-  height: 450px;
 }
 
 .card p {
@@ -124,11 +125,27 @@ h3 {
 }
 
 
+/*MEDIA QUERIES*/
+
+@media (min-width: 600px) {
+  section.small-news {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center; 
+  }
+  div.card {
+    width: 262px;
+  }
+
+  .card img {
+      height: 300px;
+
+  }
+
+}
 
 
 
-
-/*Media queries*/
 @media (min-width: 800px) {
   section.big-news {
     display: flex;
@@ -139,14 +156,24 @@ h3 {
     /*border-radius: 20%;*/
     width:360px;
   }
+
   section.big-news h2 {
     text-align: justify;
   }
+
+  section.small-news {
+    width: 800px;
+    margin: 2rem auto;
+  }
 }
+
+
 
 @media (min-width:1212px) {
   .cat-foto-wrapper img {
     width: 500px;
   }
+  section.small-news {width: 100%;}
+
   
 }
