added links to social media icons

--- a/code/style.css
+++ b/code/style.css
@@ -192,12 +192,16 @@ nav a:hover {
 .fa {
   padding: 20px;
   font-size: 30px;
+  font-weight: bold;
   width: 30px;
   text-align: center;
   text-decoration: none;
   border-radius: 50%;
   align-items: center;
-  margin: 10px 4px;
+  margin: 9px 4px;
+  font-family: 'font-awesome';
+
+
 }
 
 .fa-facebook {
@@ -205,6 +209,7 @@ nav a:hover {
   color: white;
   
 }
+
 
 .fa-twitter {
   background: #55ACEE;
@@ -215,6 +220,7 @@ nav a:hover {
 .fa-instagram {
   background: #125688;
   color: white;
+  
 }
 
 .fa:hover{
@@ -273,6 +279,7 @@ nav a:hover {
    width: 40%;
  }
  
+
  }
  
  @media (min-width: 992px) {
