--- a/code/style.css
+++ b/code/style.css
@@ -1,28 +1,7 @@
-html {
-  /*background: #e9a920;
-  color: #fff; */
-} 
-
-/* @media (min-width: 0px) and (max-width: 767px) {
-  header {
-    display: flex; 
-    justify-content: space-between;
-    background-color: blue;
-  }
-} SKa antagligen tas bort*/
-
-
-
-/* header {
-  display: flex;
-  justify-content: space-between;
-}
-
-@media (min-width: 768px) {
-  header {
-    justify-content: space-around;
-  }
-} Det som kommenteras bort ca 1:20:00*/
+/*html {
+  background: #e9a920;
+  color: #fff; 
+} */
 
 .header {
   display: flex;
@@ -33,11 +12,35 @@ html {
   width: 100px;
 }
 
+h1 {
+  display: flex;
+  vertical-align: baseline;
+}
 .big-news {
   display: flex;
   flex-direction: column;
 }
 
+/*.big-news-image {
+  display: block;
+  max-height: 200px;
+  max-width: 200px; 
+
+}*/
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+}
+
+.grid-item {
+  border: 1px solid black; 
+}
+.grid-image {
+  height: 250px;
+  width: 250px;
+  object-fit: cover;
+}
 @media (min-width: 768px) {
   .logo {
     width: 200px;
@@ -48,4 +51,15 @@ html {
     justify-content: space-between;
     align-items: center;
   }
+
+  .big-news-text {
+    width: 300px;
+  }
+  .grid-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
+
+
+
