adjusted big news pic size

--- a/code/style.css
+++ b/code/style.css
@@ -101,10 +101,10 @@ h1, h2{
 }
 
 .big-pic {
-  max-height: 400px;
-  max-width: 600px;
+  height: 400px;
+  width: 600px;
   border-radius: 1rem;
-  box-shadow: 5px 10px;
+  box-shadow: 13px 10px;
   padding-left: 15px;
 }
 
@@ -200,6 +200,15 @@ h1, h2{
 
 .nav-bar{
   display: none;
+}
+
+.grid-1 {
+  padding: 40px;
+}
+
+.big-pic {
+  height:200px;
+  width: 300px;
 }
 
 .grid-2, .grid-7 {
